--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformData\InformInventoryItemIntoChangeHandler.cs" />
     <Compile Include="LightComponents\Nature\ContainerElements\InventoryInterface.cs" />
     <Compile Include="LightComponents\Nature\SceneElementsInterface.cs" />
     <Compile Include="NatureComponents\ContainerElements\InventoryItemInfo.cs" />
