--- a/DoorofSoul.Library/DoorofSoul.Hexagram.csproj
+++ b/DoorofSoul.Library/DoorofSoul.Hexagram.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DoorofSoul.Hexagram</RootNamespace>
-    <AssemblyName>DoorofSoul.Library</AssemblyName>
+    <AssemblyName>DoorofSoul.Hexagram</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
