--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -48,13 +48,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LightComponents\Effects\Effector.cs" />
+    <Compile Include="ElementComponents\Items\Consumables.cs" />
+    <Compile Include="LightComponents\Effects\Effectors\ContainerLifePointEffector.cs" />
+    <Compile Include="LightComponents\Effects\IEffectorTarget.cs" />
+    <Compile Include="ElementComponents\Items\ItemComponent.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformData\InformInventoryItemIntoChangeHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\DiscardItemHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\MoveInventoryItemInfoHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Player\RegisterHandler.cs" />
     <Compile Include="LightComponents\Communications\Responses\Handlers\Player\RegisterResponseHandler.cs" />
-    <Compile Include="LightComponents\Nature\ContainerElements\InventoryInterface.cs" />
-    <Compile Include="LightComponents\Nature\SceneElementsInterface.cs" />
+    <Compile Include="LightComponents\HexagramInterfaces\Nature\ContainerElements\InventoryInterface.cs" />
+    <Compile Include="LightComponents\HexagramInterfaces\Nature\SceneElementsInterface.cs" />
     <Compile Include="NatureComponents\ContainerElements\InventoryItemInfo.cs" />
     <Compile Include="KnowledgeComponents\StatusEffect.cs" />
     <Compile Include="KnowledgeComponents\StatusEffects\ContainerStatusEffectInfo.cs" />
@@ -65,11 +70,11 @@
     <Compile Include="LightComponents\Communications\Operations\Handlers\Scene\FetchData\FetchItemEntitiesHandler.cs" />
     <Compile Include="LightComponents\Communications\Responses\Handlers\Container\FetchData\FetchContainerStatusEffectInfosResponseHandler.cs" />
     <Compile Include="LightComponents\Communications\Responses\Handlers\Scene\FetchData\FetchItemEntitiesResponseHandler.cs" />
-    <Compile Include="LightComponents\ElementInterface.cs" />
-    <Compile Include="LightComponents\KnowledgeInterface.cs" />
-    <Compile Include="LightComponents\LibraryHexagramInterface.cs" />
-    <Compile Include="LightComponents\NatureInterface.cs" />
-    <Compile Include="LightComponents\Nature\ContainerElementsInterface.cs" />
+    <Compile Include="LightComponents\HexagramInterfaces\ElementInterface.cs" />
+    <Compile Include="LightComponents\HexagramInterfaces\KnowledgeInterface.cs" />
+    <Compile Include="LightComponents\HexagramInterfaces\LibraryHexagramInterface.cs" />
+    <Compile Include="LightComponents\HexagramInterfaces\NatureInterface.cs" />
+    <Compile Include="LightComponents\HexagramInterfaces\Nature\ContainerElementsInterface.cs" />
     <Compile Include="NatureComponents\ContainerElements\ContainerStatusEffectManager.cs" />
     <Compile Include="NatureComponents\SceneElements\ItemEntity.cs" />
     <Compile Include="NatureComponents\SceneElements\ItemEntityManager.cs" />
@@ -247,7 +252,7 @@
     <Compile Include="NatureComponents\Scene.cs" />
     <Compile Include="NatureComponents\SceneElements\MessageLog.cs" />
     <Compile Include="NatureComponents\SceneElements\SceneEye.cs" />
-    <Compile Include="LightComponents\Knowledge\SkillIgeInterface.cs" />
+    <Compile Include="LightComponents\HexagramInterfaces\Knowledge\SkillIgeInterface.cs" />
     <Compile Include="ThroneComponents\Soul.cs" />
     <Compile Include="KnowledgeComponents\Skills\SkillInfo.cs" />
     <Compile Include="KnowledgeComponents\Skills\SkillLibrary.cs" />
@@ -280,7 +285,7 @@
     <Folder Include="LightComponents\Communications\Operations\Handlers\World\FetchData\" />
     <Folder Include="LightComponents\Communications\Responses\Handlers\Entity\FetchData\" />
     <Folder Include="LightComponents\Communications\Responses\Handlers\World\FetchData\" />
-    <Folder Include="LightComponents\Element\" />
+    <Folder Include="LightComponents\HexagramInterfaces\Element\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
