--- a/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
+++ b/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Assets\Scripts\HistoryScripts\TestScripts\UITestScripts\StatusPanelTest.cs" />
     <Compile Include="Assets\Scripts\HistoryScripts\TestScripts\UITestScripts\ViewMaskTest.cs" />
     <Compile Include="Assets\Scripts\HistoryScripts\TestScripts\UnityFunctionTestScripts\SelectAndDragIcon.cs" />
+    <Compile Include="Assets\Scripts\HistoryScripts\TestScripts\UnityFunctionTestScripts\ShootBulletAndBounce.cs" />
     <Compile Include="Assets\Scripts\HistoryScripts\TestScripts\UnityFunctionTestScripts\SuspandAndClick.cs" />
     <Compile Include="Assets\Scripts\LightScripts\CommunicationScripts\PhotonServiceController.cs" />
     <Compile Include="Assets\Scripts\LightScripts\InputScripts\EntityInputController.cs" />
