--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -48,9 +48,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LightComponents\Communications\Operations\Handlers\Container\UseItemHandler.cs" />
     <Compile Include="LightComponents\Effects\Effector.cs" />
     <Compile Include="ElementComponents\Items\Consumables.cs" />
-    <Compile Include="LightComponents\Effects\Effectors\ContainerLifePointEffector.cs" />
+    <Compile Include="LightComponents\Effects\Effectors\LifePointEffector.cs" />
     <Compile Include="LightComponents\Effects\IEffectorTarget.cs" />
     <Compile Include="ElementComponents\Items\ItemComponent.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformData\InformInventoryItemIntoChangeHandler.cs" />
